# MyToDo

./: Cargo.toml  README.md  testdb.sqlite3
migrations/2023-03-22-044858_task/: up.sql
src/: lib.rs
src/db/: mod.rs  models.rs  schema.rs
