[package]
name = "mytodo"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
diesel = { version = "2.0.4", features = ["sqlite"] }
rocket =  "0.4.11"
serde = { version = "1.0.160", features = ["derive"] }
exitcode = "1.1.2"
pad = "0.1.6"

[dependencies.rocket_contrib]
version = "0.4.11"
default-features = false
features = ["json"]